Update email address.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="logo light-weight uber-light-weight">Thought<span class="heavy-weight">Aware</span></h1>
       </header>
       <footer class="site-footer">
-          <a class="light-weight" href="mailto:info@thoughtaware.com">Contact</a>
+          <a class="light-weight" href="mailto:thoughtawareinc@gmail.com">Contact</a>
         </footer>
     </section>
 
